set up models and additional pages

--- a/views/display-posts.handlebars
+++ b/views/display-posts.handlebars
@@ -9,6 +9,7 @@
       </div>
     </div>
   </div>
+  <button id="login">Log In here</button>
 
 
   <div class="container">
@@ -33,4 +34,4 @@
 </div>
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="/js/index.js"></script>
+<script src="/js/display.js"></script>
