added user login and detection of who is posting

--- a/views/display-posts.handlebars
+++ b/views/display-posts.handlebars
@@ -9,7 +9,16 @@
       </div>
     </div>
   </div>
+        <div class="col-md-6 col-md-offset-3">
+        <h2>Welcome <span class="member-name"></span></h2>
+      </div>
   <button id="login">Log In here</button>
+      <a class="navbar-brand" href="/logout">
+        Logout
+      </a>
+            <a class="navbar-brand" href="/post">
+        Make a post
+      </a>
 
 
   <div class="container">
