--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -3,7 +3,8 @@
     <div class="row">
       <div class="col-8 offset-2">
         <div class = "userProfile">
-          <button class ="btn btn-primary float-right">{{user}}</button> 
+        <h2>Welcome <span class="member-name"></span></h2>
+      </div>
 
         </div>
         <h1>{{msg}}</h1>
