--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -3,7 +3,7 @@
         padding-top: 200px;
     }
     </style>
-  </head>
+
 
   <body class="gradient">
  <div>
@@ -30,7 +30,7 @@
                 required
               />
               <br />
-              <button class="btn btn-lg btn-primary" type="submit">
+              <button class="btn btn-lg btn-primary" id= "submit" type="submit">
                 Sign in
               </button>
               <button id = "createAccount">Create Login here</button>
@@ -52,11 +52,7 @@
 
 
 
-    <script
-      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-      crossorigin="anonymous"
-    ></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
       integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
@@ -67,7 +63,7 @@
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"
     ></script>
-    <script src="../public/js/login.js"></script>
+    <script src="/js/login.js"></script>
     <script type=text/javascript>
         var colors = new Array(
   [98, 124, 133],
