--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,12 +11,14 @@
     integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
   {{!-- Custom CSS --}}
   <link rel="stylesheet" href="/styles/styles.css" media="screen" title="no title" charset="utf-8">
-
   {{!-- Added link to the jQuery Library --}}
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-  {{!-- Custom JS --}}
   <script src="https://code.jquery.com/jquery.js"></script>
+  {{!-- Custom JS --}}
+  <script src="../../public/js/comment.js"></script>
+  <script src="../../public/js/post.js"></script>
+  <script src="../../public/js/index.js"></script>
 </head>
 
 <body>
