--- a/views/singlePost.handlebars
+++ b/views/singlePost.handlebars
@@ -15,7 +15,7 @@
            <p>
             <strong>Comments:</strong> 
             </p>
-             {{#each response}}
+             {{#each response.post.comment}}
              <p>
             {{this.text}}
             </p> 
