added loginbtn and author names

--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-8 offset-2">
         <div class = "userProfile">
-        <h2>Welcome <span class="member-name"></span></h2>
+        <h2>Welcome {{user.name}}</h2>
       </div>
 
         </div>
