--- a/views/createAccount.handlebars
+++ b/views/createAccount.handlebars
@@ -7,6 +7,10 @@
             <label for="exampleInputEmail1">Email address</label>
             <input type="email" class="form-control" id="email-input" placeholder="Email">
           </div>
+           <div class="form-group">
+            <label for="userName">User Name</label>
+            <input type="text" class="form-control" id="text-input" placeholder="Username">
+          </div>
           <div class="form-group">
             <label for="exampleInputPassword1">Password</label>
             <input type="password" class="form-control" id="password-input" placeholder="Password">
