--- a/views/display-posts.handlebars
+++ b/views/display-posts.handlebars
@@ -12,10 +12,7 @@
         <div class="col-md-6 col-md-offset-3">
         <h2>Welcome <span class="member-name"></span></h2>
       </div>
-  <button id="login">Log In here</button>
-      <a class="navbar-brand" href="/logout">
-        Logout
-      </a>
+      <button id= "logBtn"></button>
             <a class="navbar-brand" href="/post">
         Make a post
       </a>
@@ -32,6 +29,7 @@
           <h5 class="card-header"><a href="/post/{{this.id}}">{{this.text}}</h5></a>
           <div class="card-body">
             <p class="card-text"><strong>Description</strong>: {{this.description}}</p>
+            <p>Created By:{{this.User.name}} </p>
           </div>
         </div>
         {{/each}}
