--- a/views/display-one-post.handlebars
+++ b/views/display-one-post.handlebars
@@ -1,25 +1,10 @@
 <div id="display-posts">
-  <!-- Header -->
-  <div class="container mt-5 mb-5 text-center">
-    <div class="row">
-      <div class="col-12">
-        <h1>Posts Here...</h1>
-        <hr class="my-4">
-        <h3>Explore these news and trendings...</h3>
-      </div>
-    </div>
-  </div>
 
-
-  <div class="container">
-    <div class="row">
-      <div class="col-8 offset-2">
-        <h3 class="text-center">Posts Here</h3>
         {{!-- Display one post data item. --}}
         <div class="card mt-4">
           <h5 class="card-header">{{post.text}}</h5>
           <div class="card-body">
-            <p class="card-text"><strong>Description</strong>: {{post.description}}</p>
+            <p class="card-text">{{post.description}}</p>
           </div>
         </div>
       </div>
