--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,3 +1,25 @@
+.body-bg {
+  background-color:#412742;
+background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1600 800'%3E%3Cg stroke='%23000' stroke-width='66.7' stroke-opacity='0.05' %3E%3Ccircle fill='%2300bfff' cx='0' cy='0' r='1800'/%3E%3Ccircle fill='%232bb2f3' cx='0' cy='0' r='1700'/%3E%3Ccircle fill='%233da4e7' cx='0' cy='0' r='1600'/%3E%3Ccircle fill='%234997da' cx='0' cy='0' r='1500'/%3E%3Ccircle fill='%23518acc' cx='0' cy='0' r='1400'/%3E%3Ccircle fill='%23577dbd' cx='0' cy='0' r='1300'/%3E%3Ccircle fill='%235a71ae' cx='0' cy='0' r='1200'/%3E%3Ccircle fill='%235c659f' cx='0' cy='0' r='1100'/%3E%3Ccircle fill='%235b598f' cx='0' cy='0' r='1000'/%3E%3Ccircle fill='%23594e80' cx='0' cy='0' r='900'/%3E%3Ccircle fill='%23564370' cx='0' cy='0' r='800'/%3E%3Ccircle fill='%23513861' cx='0' cy='0' r='700'/%3E%3Ccircle fill='%234c2e53' cx='0' cy='0' r='600'/%3E%3Ccircle fill='%23452544' cx='0' cy='0' r='500'/%3E%3Ccircle fill='%233d1c37' cx='0' cy='0' r='400'/%3E%3Ccircle fill='%2335132a' cx='0' cy='0' r='300'/%3E%3Ccircle fill='%232c0b1e' cx='0' cy='0' r='200'/%3E%3Ccircle fill='%23240013' cx='0' cy='0' r='100'/%3E%3C/g%3E%3C/svg%3E");
+background-attachment: fixed;
+background-size: cover;
+
+}
+
+body {
+  padding: 0;
+  margin: 0;
+  color: #fff;
+}
+.card-title{
+  color: #000;
+}
+label {
+  color: #000;
+}
+#login {
+  padding-top: 200px;
+}
 .list-group-item {
   line-height: 2.5;
 }
@@ -8,4 +30,108 @@ img {
 
 .navbar-brand {
   font-family: 'Barrio', cursive;
+}
+
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.form-signin{
+  color: #000;
+}
+p{
+  color: #000;
+}
+/* 404 */
+#notfound {
+  position: relative;
+  height: 100vh;
+}
+
+#notfound .notfound {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+.notfound {
+  max-width: 520px;
+  width: 100%;
+  line-height: 1.4;
+  text-align: center;
+}
+
+.notfound .notfound-404 {
+  position: relative;
+  height: 240px;
+}
+
+.notfound .notfound-404 h1 {
+  font-family: 'Montserrat', sans-serif;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  font-size: 252px;
+  font-weight: 900;
+  margin: 0px;
+  color: #262626;
+  text-transform: uppercase;
+  letter-spacing: -40px;
+  margin-left: -20px;
+}
+
+.notfound .notfound-404 h1>span {
+  text-shadow: -8px 0px 0px #fff;
+}
+
+.notfound .notfound-404 h3 {
+  font-family: 'Cabin', sans-serif;
+  position: relative;
+  font-size: 16px;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #262626;
+  margin: 0px;
+  letter-spacing: 3px;
+  padding-left: 6px;
+}
+
+.notfound h2 {
+  font-family: 'Cabin', sans-serif;
+  font-size: 20px;
+  font-weight: 400;
+  text-transform: uppercase;
+  color: #000;
+  margin-top: 0px;
+  margin-bottom: 25px;
+}
+
+@media only screen and (max-width: 767px) {
+  .notfound .notfound-404 {
+    height: 200px;
+  }
+  .notfound .notfound-404 h1 {
+    font-size: 200px;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .notfound .notfound-404 {
+    height: 162px;
+  }
+  .notfound .notfound-404 h1 {
+    font-size: 162px;
+    height: 150px;
+    line-height: 162px;
+  }
+  .notfound h2 {
+    font-size: 16px;
+  }
 }
