--- a/views/createAccount.handlebars
+++ b/views/createAccount.handlebars
@@ -1,7 +1,13 @@
+ <div class="mininav">
+   {{>miniNav}}
+ </div>
+ <br><br><br><br>
   <div class="container">
-    <div class="row">
-      <div class="col-md-6 col-md-offset-3">
-        <h2>Sign Up Form</h2>
+    <div class="card">
+        <div class="card-title text-center">
+        <h2>Create an account</h2>
+        </div>
+        <div class="card-body">
         <form class="signup">
           <div class="form-group">
             <label for="exampleInputEmail1">Email address</label>
@@ -23,8 +29,8 @@
         </form>
         <br />
         <p>Or log in <a href="/login">here</a></p>
+        </div>
       </div>
     </div>
-  </div>
 
     <script type="text/javascript" src="js/signup.js"></script>
