--- a/views/display-posts.handlebars
+++ b/views/display-posts.handlebars
@@ -1,35 +1,24 @@
+{{!-- NAV PARTIAL --}}
+<div class="nav">
+{{>nav}}
+</div>
+<br><br>
 <div id="display-posts">
-  <!-- Header -->
-  <div class="container mt-5 mb-5 text-center">
-    <div class="row">
-      <div class="col-12">
-        <h1>Posts Here...</h1>
-        <hr class="my-4">
-        <h3>Explore these news and trendings...</h3>
-      </div>
-    </div>
-  </div>
         <div class="col-md-6 col-md-offset-3">
         <h2>Welcome <span class="member-name"></span></h2>
       </div>
-      <button id= "logBtn"></button>
-            <a class="navbar-brand" href="/post">
-        Make a post
-      </a>
-
 
   <div class="container">
     <div class="row">
       <div class="col-8 offset-2">
-        <h3 class="text-center">Posts Here</h3>
+        <h3 class="text-center">Current Happenings</h3>
         {{!-- Iterate through 'posts' data item. --}}
         {{#each posts}}
         <div class="card mt-4">
           {{!-- Title as card header --}}
           <h5 class="card-header"><a href="/post/{{this.id}}">{{this.text}}</h5></a>
           <div class="card-body">
-            <p class="card-text"><strong>Description</strong>: {{this.description}}</p>
-            <p>Created By:{{this.User.name}} </p>
+            <p class="card-text">{{this.description}}</p>
           </div>
         </div>
         {{/each}}
