--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,18 +1,12 @@
-<style> 
-    #login {
-        padding-top: 200px;
-    }
-    </style>
 
-
-  <body class="gradient">
  <div>
     <div id="login">
       <div class="container text-center">
         <div class="card">
           <div class="card-body">
             <form class="form-signin">
-              <h1>Please sign in</h1>
+              <a href="/"><img class="bunny" width="120" height="120" src="/images/rabbit.png"></a>
+              <h1>Sign in</h1>
               <label for="inputEmail" class="sr-only">Email Address</label>
               <input
                 type="email"
@@ -21,6 +15,7 @@
                 placeholder="Email Address"
                 required
               />
+              
               <label for="inputPassword" class="sr-only">Password</label>
               <input
                 type="password"
@@ -33,7 +28,7 @@
               <button class="btn btn-lg btn-primary" id= "submit" type="submit">
                 Sign in
               </button>
-              <button id = "createAccount">Create Login here</button>
+              <button class="btn btn-lg btn-secondary" id = "createAccount">Create Login here</button>
             </form>
           </div>
         </div>
@@ -64,69 +59,4 @@
       crossorigin="anonymous"
     ></script>
     <script src="/js/login.js"></script>
-    <script type=text/javascript>
-        var colors = new Array(
-  [98, 124, 133],
-  [119, 156, 171],
-  [28, 49, 68],
-  [34, 39, 37],
-  [18, 17, 19]);
-
-var step = 0;
-//color table indices for: 
-// current color left
-// next color left
-// current color right
-// next color right
-var colorIndices = [0, 1, 2, 3];
-
-//transition speed
-var gradientSpeed = 0.002;
-
-function updateGradient() {
-
-  if ($ === undefined) return;
-
-  var c0_0 = colors[colorIndices[0]];
-  var c0_1 = colors[colorIndices[1]];
-  var c1_0 = colors[colorIndices[2]];
-  var c1_1 = colors[colorIndices[3]];
-
-  var istep = 1 - step;
-  var r1 = Math.round(istep * c0_0[0] + step * c0_1[0]);
-  var g1 = Math.round(istep * c0_0[1] + step * c0_1[1]);
-  var b1 = Math.round(istep * c0_0[2] + step * c0_1[2]);
-  var color1 = "rgb(" + r1 + "," + g1 + "," + b1 + ")";
-
-  var r2 = Math.round(istep * c1_0[0] + step * c1_1[0]);
-  var g2 = Math.round(istep * c1_0[1] + step * c1_1[1]);
-  var b2 = Math.round(istep * c1_0[2] + step * c1_1[2]);
-  var color2 = "rgb(" + r2 + "," + g2 + "," + b2 + ")";
-
-  $('.gradient').css({
-    background: "-webkit-gradient(linear, left top, right top, from(" + color1 + "), to(" + color2 + "))"
-  }).css({
-    background: "-moz-linear-gradient(left, " + color1 + " 0%, " + color2 + " 100%)"
-  });
-
-  step += gradientSpeed;
-  if (step >= 1) {
-    step %= 1;
-    colorIndices[0] = colorIndices[1];
-    colorIndices[2] = colorIndices[3];
-
-    //pick two new target color indices
-    //do not pick the same as the current one
-    colorIndices[1] = (colorIndices[1] + Math.floor(1 + Math.random() * (colors.length - 1))) % colors.length;
-    colorIndices[3] = (colorIndices[3] + Math.floor(1 + Math.random() * (colors.length - 1))) % colors.length;
-
-  }
-}
-
-setInterval(updateGradient, 10);
-
-document.getElementById("createAccount").onclick = function(){
-    location.href= "/create"
-}
-
-    </script>
+  
