--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -21,12 +21,12 @@
     <hr>
 		<ul class="navbar-nav">
 		  <li class="nav-item">
-        <a class="nav-link" href="/login">Sign in <i class="fas fa-sign-in-alt"></i><span class="sr-only">(current)</span></a>
+        <a id = "logBtn" class="nav-link" href='#' > <span class="sr-only">(current)</span></a>
       </li> 
-			  <li class="nav-item">
-        <a class="nav-link" href="/logout">Logout <span class="sr-only">(current)</span></a>
-      </li> 
+
 			</ul>
   </div>
 </nav>
 <br>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="/js/navbar.js"></script>
