--- a/views/partials/miniNav.handlebars
+++ b/views/partials/miniNav.handlebars
@@ -1,5 +1,5 @@
 <nav class="navbar fixed-top navbar-expand-sm navbar-light bg-light">
-  <a class="navbar-brand" href="#"><img src="/images/rabbit.png"> Down The Rabbit Hole </a>
+  <a class="navbar-brand" href="/"><img src="/images/rabbit.png"> Down The Rabbit Hole </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -9,15 +9,15 @@
       <li class="nav-item active">
         <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
       </li>
-        
+
     </ul>
 		<ul class="navbar-nav">
 		  <li class="nav-item">
         <a class="nav-link" href="/login">Sign in <i class="fas fa-sign-in-alt"></i><span class="sr-only">(current)</span></a>
-      </li> 
+      </li>
 			  <li class="nav-item">
         <a class="nav-link" href="/logout">Logout <span class="sr-only">(current)</span></a>
-      </li> 
+      </li>
 			</ul>
   </div>
 </nav>
