--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -1,5 +1,5 @@
 <nav class="navbar fixed-top navbar-expand-sm navbar-light bg-light">
-  <a class="navbar-brand" href="#"><img src="/images/rabbit.png"> Down The Rabbit Hole </a>
+  <a class="navbar-brand" href="/"><img src="/images/rabbit.png"> Down The Rabbit Hole </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -12,7 +12,7 @@
         </div>
       <li class="nav-item">
         <a class="nav-link" href="/post">Create Post <i class="fas fa-plus"></i><span class="sr-only">(current)</span></a>
-      </li>   
+      </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
@@ -22,10 +22,10 @@
 		<ul class="navbar-nav">
 		  <li class="nav-item">
         <a class="nav-link" href="/login">Sign in <i class="fas fa-sign-in-alt"></i><span class="sr-only">(current)</span></a>
-      </li> 
+      </li>
 			  <li class="nav-item">
         <a class="nav-link" href="/logout">Logout <span class="sr-only">(current)</span></a>
-      </li> 
+      </li>
 			</ul>
   </div>
 </nav>
