--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -10,8 +10,8 @@
         <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
       </li>
         </div>
-      <li class="nav-item">
-        <a class="nav-link" href="/post">Create Post <i class="fas fa-plus"></i><span class="sr-only">(current)</span></a>
+      <li id= "postLink" class="nav-item">
+        <a  class="nav-link" href="/post">Create Post <i class="fas fa-plus"></i><span class="sr-only">(current)</span></a>
       </li>   
     </ul>
     <form class="form-inline my-2 my-lg-0">
