--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,29 +5,27 @@
   <meta charset="utf-8">
   <link rel="icon" type="png" href="/images/rabbit.png">
   <title>Down The Rabbit Hole</title>
+
   {{!-- Latest compiled and minified CSS & JS  --}}
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+
   {{!-- Font Awesome CSS --}}
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
     integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-    <!-- Google font -->
-  <link
-      href="https://fonts.googleapis.com/css?family=Barrio"
-      rel="stylesheet"
-    />
+  {{!-- Google Font --}}
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Barrio">
   {{!-- Custom CSS --}}
   <link rel="stylesheet" href="/styles/styles.css" media="screen" title="no title" charset="utf-8">
+
   {{!-- Added link to the jQuery Library --}}
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
   <script src="https://code.jquery.com/jquery.js"></script>
- {{!-- Custom JS --}}
+
 </head>
 
 <body class="body-bg">
   {{{body}}}
-
-   
-
 </body>
+
 </html>
