--- a/views/partials/sideCategory.handlebars
+++ b/views/partials/sideCategory.handlebars
@@ -1,11 +1,13 @@
 
 {{!-- Category as Side Nav --}}
 <div class="col-sm-3 col-lg-2">
-<div class="navbar navbar-default">
-    {{#each categories}}
-    <div>
-    <a href="/posts/{{this.category}}">{{this.category}}</a>
-    </div>
-    {{/each}}
-</div>
+  <nav class="navbar navbar-light bg-light">
+    <ul class="navbar-nav">
+      {{#each categories}}
+      <li class="nav-item">
+        <a class="nav-link" href="/posts/{{this.category}}">{{this.category}}</a>
+      </li>
+      {{/each}}
+    </ul>
+  </nav>
 </div>
