--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,13 +21,16 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
   <script src="https://code.jquery.com/jquery.js"></script>
+  <script type="text/javascript" src="//cdn.jsdelivr.net/npm/@microlink/vanilla@latest/umd/microlink.min.js"></script>
  {{!-- Custom JS --}}
 </head>
 
 <body class="body-bg">
   {{{body}}}
 
-   
+   <script>
+  microlink('.link-preview')
+</script>
 
 </body>
 </html>
