--- a/views/singlePost.handlebars
+++ b/views/singlePost.handlebars
@@ -22,7 +22,8 @@
             Created by: {{this.name}}
             
             </p> 
-            <p> {{this.text}}</p>
+            
+            <p>{{{this.text}}}</p>
               {{/each}}
             
             
@@ -40,4 +41,6 @@
         </form>
 </div>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<!-- Microlink SDK Vanilla/UMD bundle -->
+
 <script src="/js/comment.js"></script>
