--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,16 +1,17 @@
 .body-bg {
   background-color:#412742;
-background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1600 800'%3E%3Cg stroke='%23000' stroke-width='66.7' stroke-opacity='0.05' %3E%3Ccircle fill='%2300bfff' cx='0' cy='0' r='1800'/%3E%3Ccircle fill='%232bb2f3' cx='0' cy='0' r='1700'/%3E%3Ccircle fill='%233da4e7' cx='0' cy='0' r='1600'/%3E%3Ccircle fill='%234997da' cx='0' cy='0' r='1500'/%3E%3Ccircle fill='%23518acc' cx='0' cy='0' r='1400'/%3E%3Ccircle fill='%23577dbd' cx='0' cy='0' r='1300'/%3E%3Ccircle fill='%235a71ae' cx='0' cy='0' r='1200'/%3E%3Ccircle fill='%235c659f' cx='0' cy='0' r='1100'/%3E%3Ccircle fill='%235b598f' cx='0' cy='0' r='1000'/%3E%3Ccircle fill='%23594e80' cx='0' cy='0' r='900'/%3E%3Ccircle fill='%23564370' cx='0' cy='0' r='800'/%3E%3Ccircle fill='%23513861' cx='0' cy='0' r='700'/%3E%3Ccircle fill='%234c2e53' cx='0' cy='0' r='600'/%3E%3Ccircle fill='%23452544' cx='0' cy='0' r='500'/%3E%3Ccircle fill='%233d1c37' cx='0' cy='0' r='400'/%3E%3Ccircle fill='%2335132a' cx='0' cy='0' r='300'/%3E%3Ccircle fill='%232c0b1e' cx='0' cy='0' r='200'/%3E%3Ccircle fill='%23240013' cx='0' cy='0' r='100'/%3E%3C/g%3E%3C/svg%3E");
-background-attachment: fixed;
-background-size: cover;
-
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1600 800'%3E%3Cg stroke='%23000' stroke-width='66.7' stroke-opacity='0.05' %3E%3Ccircle fill='%2300bfff' cx='0' cy='0' r='1800'/%3E%3Ccircle fill='%232bb2f3' cx='0' cy='0' r='1700'/%3E%3Ccircle fill='%233da4e7' cx='0' cy='0' r='1600'/%3E%3Ccircle fill='%234997da' cx='0' cy='0' r='1500'/%3E%3Ccircle fill='%23518acc' cx='0' cy='0' r='1400'/%3E%3Ccircle fill='%23577dbd' cx='0' cy='0' r='1300'/%3E%3Ccircle fill='%235a71ae' cx='0' cy='0' r='1200'/%3E%3Ccircle fill='%235c659f' cx='0' cy='0' r='1100'/%3E%3Ccircle fill='%235b598f' cx='0' cy='0' r='1000'/%3E%3Ccircle fill='%23594e80' cx='0' cy='0' r='900'/%3E%3Ccircle fill='%23564370' cx='0' cy='0' r='800'/%3E%3Ccircle fill='%23513861' cx='0' cy='0' r='700'/%3E%3Ccircle fill='%234c2e53' cx='0' cy='0' r='600'/%3E%3Ccircle fill='%23452544' cx='0' cy='0' r='500'/%3E%3Ccircle fill='%233d1c37' cx='0' cy='0' r='400'/%3E%3Ccircle fill='%2335132a' cx='0' cy='0' r='300'/%3E%3Ccircle fill='%232c0b1e' cx='0' cy='0' r='200'/%3E%3Ccircle fill='%23240013' cx='0' cy='0' r='100'/%3E%3C/g%3E%3C/svg%3E");
+  background-attachment: fixed;
+  background-size: cover;
 }
 
 body {
   padding: 0;
   margin: 0;
   color: #fff;
+  box-sizing:border-box;
 }
+
 .card-title,
 .card-header {
   color: #000;
@@ -47,10 +48,35 @@ p {
 }
 
 
+
+/* ----------------------------
+ Category Sidebar Nav
+---------------------------- */
+.sidebar-nav {
+  position:fixed;
+  top:80px;
+  left:0;
+  width:150px;
+  transition: all 300ms cubic-bezier(0.65, 0.05, 0.36, 1);
+  will-change: left, width;
+  box-shadow: inset -1px 0 10px rgba(0, 0, 0, 0.4);
+}
+
+.sidebar-nav ul li {
+  padding:5px;
+}
+
+
+/* Navbar Category */
+#nav-category {
+	visibility: hidden;
+}
+
+
+
 /* ----------------------------
  404 Not Found
 ---------------------------- */
-
 #notfound {
   position: relative;
   height: 100vh;
@@ -126,6 +152,28 @@ p {
  Media Responsive
 ---------------------------- */
 
+/* Bootstrap grid small < 992px */
+@media only screen and (max-width: 992px) {
+  .notfound .notfound-404 {
+    height: 200px;
+  }
+  .notfound .notfound-404 h1 {
+    font-size: 200px;
+  }
+  #nav-category {
+	  visibility: hidden;
+    max-width: 2px;
+  }
+  #sidenav-category {
+	  visibility: visible;
+  }
+  #search-btn{
+    visibility: hidden;
+    max-width: 2px;
+  }
+}
+
+/* Bootstrap grid extra small < 768px */
 @media only screen and (max-width: 767px) {
   .notfound .notfound-404 {
     height: 200px;
@@ -133,8 +181,21 @@ p {
   .notfound .notfound-404 h1 {
     font-size: 200px;
   }
+  #nav-category {
+	  visibility: visible;
+    max-width: 100%;
+  }
+  #sidenav-category {
+	  visibility: hidden;
+  }
+  #search-btn{
+    visibility: visible;
+    max-width: 100%;
+  }
 }
 
+
+/* Bootstrap grid super extra small ? < 576 px */
 @media only screen and (max-width: 480px) {
   .notfound .notfound-404 {
     height: 162px;
@@ -146,5 +207,12 @@ p {
   }
   .notfound h2 {
     font-size: 16px;
+  }
+  #nav-category {
+	  visibility: visible;
+    max-width: 100%;
+  }
+  #sidenav-category {
+	  visibility: hidden;
   }
 }
