--- a/views/partials/sideCategory.handlebars
+++ b/views/partials/sideCategory.handlebars
@@ -1,13 +1,15 @@
 
 {{!-- Category as Side Nav --}}
-<div class="col-sm-3 col-lg-2">
-  <nav class="navbar navbar-light bg-light">
-    <ul class="navbar-nav">
-      {{#each categories}}
-      <li class="nav-item">
-        <a class="nav-link" href="/posts/{{this.category}}">{{this.category}}</a>
-      </li>
-      {{/each}}
-    </ul>
-  </nav>
+<div id="sidenav-category" class="col-2">
+  <div class="sidebar-nav navbar-dark bg-dark">
+    <nav class="navbar">
+      <ul class="navbar-nav">
+        {{#each categories}}
+        <li class="nav-item">
+          <a class="nav-link" href="/posts/{{this.category}}">{{this.category}}</a>
+        </li>
+        {{/each}}
+      </ul>
+    </nav>
+  </div>
 </div>
