pending duplicate functionality

--- a/views/createAccount.handlebars
+++ b/views/createAccount.handlebars
@@ -7,6 +7,9 @@
         <div class="card-title text-center">
         <h2>Create an account</h2>
         </div>
+        <div>
+          <p id= "duplicate" style= "display:none">This email is already registered. </p>
+        </div>
         <div class="card-body">
         <form class="signup">
           <div class="form-group">
