--- a/views/partials/sideCategory.handlebars
+++ b/views/partials/sideCategory.handlebars
@@ -2,8 +2,11 @@
 {{!-- Category as Side Nav --}}
 <div id="sidenav-category" class="col-2">
   <div class="sidebar-nav navbar-dark bg-dark">
-    <nav class="navbar">
+    <nav class="navbar sidenav">
       <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="/">All</a>
+        </li>
         {{#each categories}}
         <li class="nav-item">
           <a class="nav-link" href="/posts/{{this.category}}">{{this.category}}</a>
