--- a/views/display-posts.handlebars
+++ b/views/display-posts.handlebars
@@ -24,6 +24,7 @@
           <div class="card-body">
             <p class="card-text">{{this.description}}</p>
             <p>Created By:{{this.User.name}} </p>
+            <button class= "like" value = '{{this.id}}'>Like</button>
           </div>
         </div>
         {{/each}}
