new bg & hbs updates

--- a/views/createAccount.handlebars
+++ b/views/createAccount.handlebars
@@ -1,7 +1,7 @@
- <div class="mininav">
+ <div class="nav">
    {{>miniNav}}
  </div>
- <br><br><br><br>
+ 
   <div class="container">
     <div class="card">
         <div class="card-title text-center">
