--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -24,10 +24,7 @@
  {{!-- Custom JS --}}
 </head>
 
-<body class="body-bg">
-  {{{body}}}
-
-   
-
+<body class="bg">
+  {{{body}}}  
 </body>
 </html>
