--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,11 +1,11 @@
-.body-bg {
-  background-color:#412742;
-background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1600 800'%3E%3Cg stroke='%23000' stroke-width='66.7' stroke-opacity='0.05' %3E%3Ccircle fill='%2300bfff' cx='0' cy='0' r='1800'/%3E%3Ccircle fill='%232bb2f3' cx='0' cy='0' r='1700'/%3E%3Ccircle fill='%233da4e7' cx='0' cy='0' r='1600'/%3E%3Ccircle fill='%234997da' cx='0' cy='0' r='1500'/%3E%3Ccircle fill='%23518acc' cx='0' cy='0' r='1400'/%3E%3Ccircle fill='%23577dbd' cx='0' cy='0' r='1300'/%3E%3Ccircle fill='%235a71ae' cx='0' cy='0' r='1200'/%3E%3Ccircle fill='%235c659f' cx='0' cy='0' r='1100'/%3E%3Ccircle fill='%235b598f' cx='0' cy='0' r='1000'/%3E%3Ccircle fill='%23594e80' cx='0' cy='0' r='900'/%3E%3Ccircle fill='%23564370' cx='0' cy='0' r='800'/%3E%3Ccircle fill='%23513861' cx='0' cy='0' r='700'/%3E%3Ccircle fill='%234c2e53' cx='0' cy='0' r='600'/%3E%3Ccircle fill='%23452544' cx='0' cy='0' r='500'/%3E%3Ccircle fill='%233d1c37' cx='0' cy='0' r='400'/%3E%3Ccircle fill='%2335132a' cx='0' cy='0' r='300'/%3E%3Ccircle fill='%232c0b1e' cx='0' cy='0' r='200'/%3E%3Ccircle fill='%23240013' cx='0' cy='0' r='100'/%3E%3C/g%3E%3C/svg%3E");
-background-attachment: fixed;
-background-size: cover;
+
+.bg {
+   background-image: url('/images/bg.svg');
+   background-repeat: repeat;
+   background-position-x: repeat;
+
 
 }
-
 body {
   padding: 0;
   margin: 0;
@@ -27,7 +27,12 @@ img {
   height: 50px;
   width: 50px;
 }
-
+a {
+  color: #000;
+}
+.nav {
+  padding-bottom: 4em;
+}
 .navbar-brand {
   font-family: 'Barrio', cursive;
 }
