--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -1,19 +1,26 @@
 <nav class="navbar fixed-top navbar-expand-sm navbar-light bg-light">
-  <a class="navbar-brand" href="#"><img src="/images/rabbit.png"> Down The Rabbit Hole </a>
+  <a class="navbar-brand" href="/"><img src="/images/rabbit.png"> Down The Rabbit Hole </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-      </li>
         </div>
       <li class="nav-item">
         <a class="nav-link" href="/post">Create Post <i class="fas fa-plus"></i><span class="sr-only">(current)</span></a>
       </li>   
     </ul>
+    <div class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Dropdown
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          {{#each categories}}
+          <a class="dropdown-item" href="#">{{category}}</a>
+          {{/each}}
+        </div>
+    </div>
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
       <button href="" class="btn btn-outline-dark my-2 my-sm-0" type="submit">Search</button>
@@ -30,3 +37,7 @@
   </div>
 </nav>
 <br>
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
