--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -2,16 +2,14 @@
 <div class="nav">
 {{>miniNav}}
 </div>
-<div id="home">
+<div id="post-pg">
   <div class="container">
-    <div class="row">
-      <div class="col-8 offset-2">
-        <div class = "userProfile">
-        <h2>Welcome {{user.name}}</h2>
-      </div>
-
-        </div>
-        <form class="clearfix mb-4" action="POST">
+        <div class="">
+          <div class="">
+            <h2></h2>
+          </div>
+          <div class="">
+                  <form class="clearfix mb-4" action="POST">
           <div class="form-group">
             <label for="post-text">Title</label>
             <input type="text" id="post-text" class="form-control" aria-describedby="post-text" placeholder="Enter post Text">
@@ -27,10 +25,10 @@
           <button id="submit" class="btn btn-primary float-right">Submit</button>
         </form>
         </ul>
+        </div>
       </div>
-    </div>
-  </div>
-</div>
-
+      </div>
+   
+   
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="/js/post.js"></script>
