--- a/views/singlePost.handlebars
+++ b/views/singlePost.handlebars
@@ -1,3 +1,4 @@
+<div class="viewPost">
 <div class="container">
   <div class="row">
     <div class="col-8 offset-2">
@@ -38,6 +39,7 @@
           </div>
           <button id="submit" post="{{response.post.id}}" class="btn btn-primary float-right">Submit</button>
         </form>
+</div>
 </div>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="/js/comment.js"></script>
