--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,18 +1,23 @@
-
 .bg {
    background-image: url('/images/bg.svg');
    background-repeat: repeat;
    background-position-x: repeat;
-
-
 }
 body {
   padding: 0;
   margin: 0;
-  color: #fff;
+  color: #000;/
 }
 .card-title{
   color: #000;
+}
+.card {
+  background-color:#F5F5F5;
+  opacity: 0.8;
+}
+
+.container {
+  padding-top: 100px;
 }
 label {
   color: #000;
