--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -4,11 +4,11 @@
 </div>
 <div id="post-pg">
   <div class="container">
-        <div class="">
-          <div class="">
+        <div class="card">
+          <div class="card-title">
             <h2></h2>
           </div>
-          <div class="">
+          <div class="card-body">
                   <form class="clearfix mb-4" action="POST">
           <div class="form-group">
             <label for="post-text">Title</label>
