--- a/views/createAccount.handlebars
+++ b/views/createAccount.handlebars
@@ -5,9 +5,9 @@
   <div class="container">
     <div class="card">
         <div class="card-title text-center">
-        <h2>Create an account</h2>
-        </div>
         <div class="card-body">
+          <a href="/"><img class="bunny" width="120" height="120" src="/images/rabbit.png"></a>
+        <h2>Create an account</h2>
         <form class="signup">
           <div class="form-group">
             <label for="exampleInputEmail1">Email address</label>
@@ -25,7 +25,7 @@
             <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
             <span class="sr-only">Error:</span> <span class="msg"></span>
           </div>
-          <button type="submit" class="btn btn-default">Sign Up</button>
+          <button type="submit" class="btn btn-secondary">Sign Up</button>
         </form>
         <br />
         <p>Or log in <a href="/login">here</a></p>
