--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -4,9 +4,10 @@
    background-position-x: repeat;
 }
 body {
+  background-color: #DCDCDC;
   padding: 0;
   margin: 0;
-  color: #000;/
+  color: #000;
 }
 .card-title{
   color: #000;
@@ -15,7 +16,20 @@ body {
   background-color:#F5F5F5;
   opacity: 0.8;
 }
+.greeting {
+  color:#F0FFFF;
+  font-family: 'Major Mono Display', monospace;
+  padding-bottom: 1em;
+}
+.topPost {
+  color: #F0FFFF;
+  font-family: 'Major Mono Display', monospace;
 
+}
+#comment {
+  color: #F0FFFF;
+  font-family: 'Major Mono Display', monospace;
+}
 .container {
   padding-top: 100px;
 }
@@ -23,7 +37,7 @@ label {
   color: #000;
 }
 #login {
-  padding-top: 200px;
+  padding-top: 100px;
 }
 .list-group-item {
   line-height: 2.5;
