--- a/views/comment.handlebars
+++ b/views/comment.handlebars
@@ -8,9 +8,11 @@
         </div>
         <h1>{{msg}}</h1>
     <div>{{post}}</div>
+   </div>
+   </div>
+   </div>
 
-
-
+        <div class="container">
         <form class="clearfix mb-4" action="POST">
           <div class="form-group">
             <label for="comment-description">Comment</label>
@@ -21,8 +23,9 @@
         </ul>
       </div>
     </div>
-  </div>
-</div>
+    
+ 
+
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="/js/comment.js"></script>
