--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,6 +15,7 @@
       href="https://fonts.googleapis.com/css?family=Barrio"
       rel="stylesheet"
     />
+    <link href="https://fonts.googleapis.com/css?family=Major+Mono+Display" rel="stylesheet">
   {{!-- Custom CSS --}}
   <link rel="stylesheet" href="/styles/styles.css" media="screen" title="no title" charset="utf-8">
   {{!-- Added link to the jQuery Library --}}
