--- a/views/singlePost.handlebars
+++ b/views/singlePost.handlebars
@@ -11,31 +11,36 @@
           <hr>
             <h3>{{response.post.description}}</h3>
            <h4>-{{response.post.name}}</h4>
-            <strong>Comments:</strong> 
-            </p>
-            
+           <hr>
+           <div class="card-title">
+              <h3>Comments:</h3> 
+           </div>
+            <div class="card-body">
              {{#each response.post.comment}}
-             <p>
-            Created by: {{this.name}}
-            
-            </p> 
+             
             <p> {{this.text}}</p>
+           <p>- {{this.name}}
+            </p> 
+            <hr>
               {{/each}}
-            
-            
-            <a href="/">← Back To Home</a>
+            </div>
+            </div>
+            </div>
+            </div>
+            </div>
         </div>
       </div>
-    </div>
-  </div>
+
+        <div class="container">
           <form class="clearfix mb-4" action="POST">
           <div class="form-group">
-            <label for="comment-description">Comment</label>
+            <label id="comment" for="comment-description"><h3>Add a Comment</h3></label>
             <textarea class="form-control" id="comment-description" aria-describedby="commet-description" placeholder="Enter comment"></textarea>
           </div>
           <button id="submit" post="{{response.post.id}}" class="btn btn-primary float-right">Submit</button>
         </form>
-</div>
-</div>
+        </div>
+
+
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="/js/comment.js"></script>
