--- a/views/display-posts.handlebars
+++ b/views/display-posts.handlebars
@@ -27,7 +27,7 @@
           {{!-- Title as card header --}}
           <h5 class="card-header"><a href="/post/{{this.id}}">{{this.text}}</h5></a>
           <div class="card-body">
-            <p class="card-text">{{this.description}}</p>
+            <p class="card-text">{{{this.description}}}</p>
             <p>Created By:{{this.User.name}} </p>
             <button class= "like" value = '{{this.id}}'>Like</button>
           </div>
