--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,12 +12,9 @@
   {{!-- Font Awesome CSS --}}
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
     integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-    <!-- Google font -->
-  <link
-      href="https://fonts.googleapis.com/css?family=Barrio"
-      rel="stylesheet"
-    />
-    <link href="https://fonts.googleapis.com/css?family=Major+Mono+Display" rel="stylesheet">
+  <!-- Google font -->
+  <link href="https://fonts.googleapis.com/css?family=Barrio" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Major+Mono+Display" rel="stylesheet">
   {{!-- Custom CSS --}}
   <link rel="stylesheet" href="/styles/styles.css" media="screen" title="no title" charset="utf-8">
 
@@ -26,15 +23,15 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
   <script src="https://code.jquery.com/jquery.js"></script>
   <script type="text/javascript" src="//cdn.jsdelivr.net/npm/@microlink/vanilla@latest/umd/microlink.min.js"></script>
- {{!-- Custom JS --}}
+  {{!-- Custom JS --}}
 </head>
 
 <body class="bg">
   {{{body}}}
 
-   <script>
-  microlink('.link-preview')
-</script>
+  <script>
+    microlink('.link-preview')
+  </script>
 
 
 </html>
