--- a/views/display-posts.handlebars
+++ b/views/display-posts.handlebars
@@ -9,7 +9,7 @@
 
   {{!-- Header Welcome User --}}
   <div class="col-md-3 offset-9 mt-3 mb-3 text-center">
-    <h5>Welcome <span class="member-name"></span></h5>
+    <h5 class="greeting">Welcome <span class="member-name"></span></h5>
   </div>
 
   {{!-- Body --}}
@@ -20,7 +20,7 @@
 
       {{!-- Show All Posts --}}
       <div class="col-8">
-        <h3 class="text-center">Current Happenings</h3>
+        <h3 class="text-center topPost">Trending Posts</h3>
         {{!-- Iterate through 'posts' data item. --}}
         {{#each posts}}
         <div class="card mt-4">
