--- a/views/display-posts.handlebars
+++ b/views/display-posts.handlebars
@@ -29,7 +29,10 @@
           <div class="card-body">
             <p class="card-text">{{{this.description}}}</p>
             <p>Created By:{{this.User.name}} </p>
+            <div class = 'voting'+ {{this.id}}'>
             <button class= "like" value = '{{this.id}}'>Like</button>
+             <button class= "dislike" value = '{{this.id}}'>Like</button>
+          </div>
           </div>
         </div>
         {{/each}}
