added buttons and animations

--- a/views/display-posts.handlebars
+++ b/views/display-posts.handlebars
@@ -28,8 +28,8 @@
             <p class="card-text">{{{this.description}}}</p>
             <p>Created By:{{this.User.name}} </p>
             <div class = 'voting'+ {{this.id}}>
-            <i class= "like fas fa-carrot" value = '{{this.id}}'></i>
-             <i class= "dislike far fa-frown-open" value = '{{this.id}}'></i>
+            <i class= "like fas fa-carrot fa-lg" value = '{{this.id}}'></i>
+             <i class= "dislike far fa-frown-open fa-lg" value = '{{this.id}}'></i>
           </div>
           </div>
         </div>
@@ -40,6 +40,6 @@
   </div>
   {{!-- End Body --}}
 </div>
-
+<link rel="stylesheet" href="/styles/main.css" media="screen" title="no title" charset="utf-8">
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="/js/display.js"></script>
