--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -34,7 +34,12 @@
         <a class="nav-link" href="/post">Create Post
           <i class="fas fa-plus"></i><span class="sr-only">(current)</span></a>
       </li>
-
+            <li id="popularPosts" class="nav-item">
+        <a class="nav-link" href="/popular">Most Popular Posts
+          <span class="sr-only">(current)</span></a>
+      </li>
+    
+    
       <form class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
         <button id="search-btn" href="#" class="btn btn-outline-dark my-2 my-sm-0"
