--- a/views/singlePost.handlebars
+++ b/views/singlePost.handlebars
@@ -21,7 +21,7 @@
         <h2 class="text-center topPost">For The Curious...</h2>
 
         <div class="card mt-4">
-          <h5 class="card-header">{{response.post.text}}</h5>
+          <h5 class="card-header">{{{linkify response.post.text}}}</h5>
           <div class="card-body">
             <p class="card-text">{{{linkify response.post.description}}}</p>
             <p><strong>Author: </strong> {{response.post.name}} </p>
