added hover effects

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -2,3 +2,13 @@
     cursor: pointer;
     margin-right:5px;
 }
+a:link {
+    text-decoration: none;
+}
+a:hover{
+    text-decoration:none;
+}
+li:hover{
+        text-decoration: none;
+
+}
