--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,13 +17,14 @@
   <link href="https://fonts.googleapis.com/css?family=Major+Mono+Display" rel="stylesheet">
   {{!-- Custom CSS --}}
   <link rel="stylesheet" href="/styles/styles.css" media="screen" title="no title" charset="utf-8">
-
+ <link href="/styles/hover.css" rel="stylesheet">
   {{!-- Added link to the jQuery Library --}}
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
   <script src="https://code.jquery.com/jquery.js"></script>
   <script type="text/javascript" src="//cdn.jsdelivr.net/npm/@microlink/vanilla@latest/umd/microlink.min.js"></script>
   {{!-- Custom JS --}}
+ 
 </head>
 
 <body class="bg">
