--- a/views/partials/sideCategory.handlebars
+++ b/views/partials/sideCategory.handlebars
@@ -4,12 +4,12 @@
   <div class="sidebar-nav navbar-dark bg-dark">
     <nav class="navbar sidenav">
       <ul class="navbar-nav">
-        <li class="nav-item">
+        <li class="hvr-sweep-to-right nav-item">
           <a class="nav-link" href="/">All</a>
         </li>
         {{#each categories}}
-        <li class="nav-item">
-          <a class="nav-link" href="/posts/{{this.category}}">{{this.category}}</a>
+        <li class=" hvr-sweep-to-right nav-item">
+          <a class=" nav-link" href="/posts/{{this.category}}">{{this.category}}</a>
         </li>
         {{/each}}
       </ul>
